Fix a potential build issue when building KMail

Summary:
some public mailcommon headers include libkdepim ones but the build system
currently doesn't look for this dependency.

Let's look for libkdepim for building mailcommon and explicitly add
KF5::Libkdepim to the 'PUBLIC' link targets to fix the
INTERFACE_LINK_LIBRARIES instead of relying on indirect dependencies.

Also fix a wrong #include statement.

BUG: 407163
FIXED-IN: 5.11.2

Reviewers: mlaurent, vandenoever

Reviewed By: mlaurent

Subscribers: kde-pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D21205